fix translation on mobile

--- a/src/components/List/_list.scss
+++ b/src/components/List/_list.scss
@@ -50,7 +50,7 @@ $easing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
       margin: 0;
       opacity: 0;
       overflow: hidden;
-      transform: translateX(110vw);
+      transform: translateX(calc(#{var(--x-dist)} * 1px));
       transition: transform 0.5s $easing, max-height 0.5s $easing,
         margin 0.5s $easing, opacity 0.5s;
     }
